Finishing Video Information

--- a/youtube/youtube-videos/youtube-copy-video-saint_tropez.html
+++ b/youtube/youtube-videos/youtube-copy-video-saint_tropez.html
@@ -14,7 +14,8 @@
   <!--Adding styles-->
   <link rel="stylesheet" href="../styles/yt-general.css">
   <link rel="stylesheet" href="../styles/yt-header.css">
-  <link rel="stylesheet" href="./styles/yt-video-main.css">
+  <link rel="stylesheet" href="./styles/yt-video_video-interface.css">
+  <link rel="stylesheet" href="./styles/yt-video_video-information.css">
   <title>Post Malone - Saint-Tropez</title>
 </head>
 <body>
@@ -238,6 +239,161 @@
             </figure>
           </div>
         </div>
+      </div>
+    </div>
+    <!--Video Information-->
+    <div class="main-info">
+      <!--Video Title-->
+      <h1 class="info-title">
+        Post Malone - Saint-Tropez (Official Video)
+      </h1>
+      <!--Channel Info-->
+      <div class="info-channel">
+        <!--Channel figure-->
+        <figure class="info-channel_fig">
+          <!--Channel image-->
+          <a href="https://www.youtube.com/channel/UCeLHszkByNZtPKcaVXOCOQQ">
+            <img class="info-channel_img" src="../images/channel-pictures/channel-picture-post.jpg" alt="Post Malone Channel Picture">
+          </a>
+        </figure>
+        <!--Channel further info-->
+        <div class="info-channel_account">
+          <!--Channel Name-->
+          <div class="info-channel_account-name">
+            <a href="https://www.youtube.com/channel/UCeLHszkByNZtPKcaVXOCOQQ">
+              <span class="info-channel_account-name__name">
+                Post Malone
+                <span class="info-channel_account-name__tooltip">
+                  Post Malone
+                </span>
+              </span>
+            </a>
+            <div class="info-channel_account-badge">
+              <img class="info-channel_account-badge__badge" src="../images/icons/music.svg" alt="Music Badge">
+              <span class="info-channel_account-badge__tooltip">
+                Official Artist Channel
+              </span>
+            </div>
+          </div>
+          <!--Channel Subscribers-->
+          <span class="info-channel_account-subscribers">
+            25M subscribers
+          </span>
+        </div>
+        <!--Channel Subscribe Button-->
+        <button class="info-channel_subscribe">
+          Subscribe
+        </button>
+      </div>
+      <!--Video Interactions-->
+      <div class="info-interactions">
+        <!--Video Like-->
+        <div class="info-interactions_like">
+          <!--Like button-->
+          <button class="info-interactions_like-like">
+            <img class="info-interactions_like-img__like" src="../images/icons/liked-videos.svg" alt="Like Icon">
+            <span class="info-interactions_text">
+              1.2M
+            </span>
+            <!--Like Tooltip-->
+            <span class="info-interactions_tooltip like-tooltip">
+              I like this
+            </span>
+          </button>
+          <!--Dislike button-->
+          <button class="info-interactions_like-dislike">
+            <figure class="info-interactions_like-fig__dislike">
+              <img class="info-interactions_like-img__dislike" src="../images/icons/dislike.svg" alt="Dislike Icon">
+            </figure>
+            <!--Dislike Tooltip-->
+            <span class="info-interactions_tooltip dislike-tooltip">
+              I dislike this
+            </span>
+          </button>
+        </div>
+        <!--Video Share-->
+        <div class="info-interactions_share">
+          <!--Share Button-->
+          <button class="info-interactions_share-button">
+            <img class="info-interactions_share-img" src="../images/icons/share.svg" alt="Share Icon">
+            <span class="info-interactions_text">
+              Share
+            </span>
+            <!--Share Tooltip-->
+            <span class="info-interactions_tooltip share-tooltip">
+              Share
+            </span>
+          </button>
+        </div>
+        <!--Video Download-->
+        <div class="info-interactions_download">
+          <!--Download Button-->
+          <button class="info-interactions_download-button">
+            <img class="info-interactions_download-img" src="../images/icons/download.svg" alt="Download Icon">
+            <span class="info-interactions_text">
+              Download
+            </span>
+            <!--Download Tooltip-->
+            <span class="info-interactions_tooltip download-tooltip">
+              Download
+            </span>
+          </button>
+        </div>
+        <!--Video More-->
+        <div class="info-interactions_more">
+          <!--More Button-->
+          <button class="info-interactions_more-button">
+            <span class="info-interactions_more-text">
+              ...
+            </span>
+          </button>
+        </div>
+      </div>
+      <!--Video Description-->
+      <div class="info-description">
+        <!--Video Description stats-->
+        <div class="info-description_stats">
+          <span class="info-description_views">
+            115M views
+          </span>
+          <span class="info-description_date">
+            3 years ago
+          </span>
+          <span class="info-description_tags">
+            #PostMalone #HollywoodBleeding #SaintTropez
+          </span>
+          <span class="info-description_tooltip">
+            115,725,854 views &#8226; 11 Sept 2019 &#8226; #PostMalone #HollywoodBleeding #SaintTropez
+          </span>
+        </div>
+        <!--Video Description Info-->
+        <div class="info-description_further-info">
+          <span class="info-description_further-info_text">
+            Official music video by Post Malone performing "Saint-Tropez" &#8211; off his new album 'Hollywood's Bleeding' available now:
+          </span>
+          <!--Video Links-->
+          <a href="https://postmalone.lnk.to/hollywoodsbleedingYD">
+            <span class="info-description_link">
+              https://postmalone.lnk.to/hollywoodsb...
+            </span>
+          </a>
+          <span class="info-description_showmore">
+            Show more
+          </span>
+          <span class="info-description_shadow">
+          </span>
+        </div>
+      </div>
+      <!--Video Suggested-->
+      <div class="info-suggested">
+        <span class="info-suggested_suggester">
+          Suggested by UMG
+        </span>
+        <span class="info-suggested_video">
+          <a href="https://www.youtube.com/watch?v=lCiV4wACZ8w">
+            Post Malone - Motley Crew (Official Video)
+          </a>
+        </span>
       </div>
     </div>
   </main>
