Finishing the Video Comments Section

--- a/youtube/youtube-copy.html
+++ b/youtube/youtube-copy.html
@@ -495,7 +495,7 @@
     <section class="main-video">
       <!--Video Image-->
       <figure class="main-video_fig">
-        <a href="https://www.youtube.com/watch?v=MRyLC2M1K2w">
+        <a href="./youtube-videos/youtube-copy-video-saint_tropez.html">
           <img class="main-video_img" src="./images/video-pictures/video-picture-saint.jpg" alt="Post Malone in the desert">
           <!--Video Duration-->
           <span class="main-video_time">
@@ -519,7 +519,7 @@
         <div class="main-video_details-info">
           <!--Video Title-->
           <div class="main-video_details-title">
-            <a href="https://www.youtube.com/watch?v=MRyLC2M1K2w">
+            <a href="./youtube-videos/youtube-copy-video-saint_tropez.html">
               <span>
                 Post Malone - Saint-Tropez (Official Video)
               </span>
