Implementing the Video Interface for the other three main videos

--- a/youtube/youtube-copy.html
+++ b/youtube/youtube-copy.html
@@ -559,7 +559,7 @@
     <section class="main-video">
       <!--Video Image-->
       <figure class="main-video_fig">
-        <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk">
+        <a href="./youtube-videos/youtube-copy-video-lofi_radio.html">
           <img class="main-video_img" src="./images/video-pictures/video-picture-lofi.jpg" alt="A girl studying next to a window while is raining">
         <!--Indicative text-->
         <span class="main-video_play">
@@ -583,7 +583,7 @@
         <div class="main-video_details-info">
           <!--Video Title-->
           <div class="main-video_details-title">
-            <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk">
+            <a href="./youtube-videos/youtube-copy-video-lofi_radio.html">
               <span>
                 lofi hip hop radio - beats to relax/study to
               </span>
@@ -610,7 +610,7 @@
           </div>
           <!--Video Stats-->
           <div class="main-video_details-stats">
-            <a href="https://www.youtube.com/watch?v=jfKfPfyJRdk">
+            <a href="./youtube-videos/youtube-copy-video-lofi_radio.html">
               <span>
                 41K watching
               </span>
@@ -630,7 +630,7 @@
     <section class="main-video">
       <!--Video Image-->
       <figure class="main-video_fig">
-        <a href="https://www.youtube.com/watch?v=MzJjzEEphfM">
+        <a href="./youtube-videos/youtube-copy-video-halo_thunder-rain.html">
           <img class="main-video_img" src="./images/video-pictures/video-picture-halo.jpg" alt="A Halo soldier under the rain">
           <!--Video Duration-->
           <span class="main-video_time">
@@ -660,7 +660,7 @@
         <div class="main-video_details-info">
           <!--Video Title-->
           <div class="main-video_details-title">
-            <a href="https://www.youtube.com/watch?v=MzJjzEEphfM">
+            <a href="./youtube-videos/youtube-copy-video-halo_thunder-rain.html">
               <span>
                 &#127911; Thunder and Rain with Halo 3: ODST Piano 8 Hours | Sleep and...
               </span>
@@ -685,7 +685,7 @@
           </div>
           <!--Video Stats-->
           <div class="main-video_details-stats">
-            <a href="https://www.youtube.com/watch?v=MzJjzEEphfM"">
+            <a href="./youtube-videos/youtube-copy-video-halo_thunder-rain.html"">
               <span>
                 11M views &#8226; 5 years ago
               </span>
@@ -698,7 +698,7 @@
     <section class="main-video">
       <!--Video Image-->
       <figure class="main-video_fig">
-        <a href="https://www.youtube.com/watch?v=_dL3AygsCMc">
+        <a href="./youtube-videos/youtube-copy-video-betrayed.html">
           <img class="main-video_img" src="./images/video-pictures/video-picture-betrayed.jpg" alt="Lil Xan Looking at the camera with a blue background">
           <!--Video Duration-->
           <span class="main-video_time">
@@ -722,7 +722,7 @@
         <div class="main-video_details-info">
           <!--Video Title-->
           <div class="main-video_details-title">
-            <a href="https://www.youtube.com/watch?v=_dL3AygsCMc">
+            <a href="./youtube-videos/youtube-copy-video-betrayed.html">
               <span>
                 Lil Xan - Betrayed
               </span>
@@ -749,7 +749,7 @@
           </div>
           <!--Video Stats-->
           <div class="main-video_details-stats">
-            <a href="https://www.youtube.com/watch?v=_dL3AygsCMc">
+            <a href="./youtube-videos/youtube-copy-video-betrayed.html">
               <span>
                 173M views &#8226; 4 years ago
               </span>
